--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,7 @@
 {
-      "devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
-  "builds": [
-    {
-      "src": "app/main.py",
-      "use": "@vercel/python"
+  "functions": {
+    "api/search": {
+      "runtime": "vercel-python@0.5.0"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app/main.py"
-    }
-  ]
+  }
 }
