--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@huggingface/transformers": "^3.3.3",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tuesdaycrowd/sentence-transformers": "^1.0.1",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.9",
+    "client-vector-search": "^0.2.0",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
