--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -1,9 +1,9 @@
-fastapi
-uvicorn
-requests
-faiss-cpu
-scikit-learn
-tensorflow-hub
-numpy
-pydantic
-tensorflow
+fastapi>=0.68.0
+uvicorn>=0.15.0
+numpy>=1.21.0
+faiss-cpu>=1.7.0
+requests>=2.26.0
+tensorflow-cpu>=2.6.0  # Changed to CPU-only version
+tensorflow-hub>=0.12.0
+scikit-learn>=1.0.0
+python-multipart>=0.0.5
