--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.9",
     "client-vector-search": "^0.2.0",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
