--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,3 +1,4 @@
 {
-  "redirects": [{ "source": "/", "destination": "/api" }]
+  "builds": [{ "src": "combined-search.py", "use": "@vercel/python" }],
+  "routes": [{ "src": "/(.*)", "dest": "combined-search.py" }]
 }
