--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,4 +1,14 @@
 {
-  "builds": [{ "src": "combined-search.py", "use": "@vercel/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "combined-search.py" }]
+  "builds": [
+    {
+      "src": "api/combined-search.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/combined-search.py"
+    }
+  ]
 }
