--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn>=0.15.0
 numpy>=1.21.0
 faiss-cpu>=1.7.0
 requests>=2.26.0
-tensorflow-cpu==2.15.0
+tensorflow-cpu>=2.16.0
 tensorflow-hub==0.15.0
 scikit-learn>=1.0.0
 python-multipart>=0.0.5
