--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,10 @@
   "builds": [
     {
       "src": "api/combined-search.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "pythonVersion": "3.10"
+      }
     }
   ],
   "routes": [
